<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2011 The WebRTC project authors. All Rights Reserved. -->
<!--  -->
<!-- Use of this source code is governed by a BSD-style license -->
<!-- that can be found in the LICENSE file in the root of the source -->
<!-- tree. An additional intellectual property rights grant can be found -->
<!-- in the file PATENTS.  All contributing project authors may -->
<!-- be found in the AUTHORS file in the root of the source tree. -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:app="http://schemas.android.com/apk/res/com.tuenti.voice" 
    android:id="@+id/LayoutMain"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_2" >
    
    <com.google.ads.AdView  
		android:id="@+id/adView" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		ads:adUnitId="a1506aca1679e16"
        ads:adSize="BANNER"
        ads:testDevices="TEST_EMULATOR, TEST_DEVICE_ID"
        ads:loadAdOnCreate="true" />
    
    <TextView
        android:id="@+id/status_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
       
<!-- elimino btn Initialize Client-> mclient.init()
    <Button
        android:id="@+id/init_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/init_btn" >
    </Button>
-->
<!-- 
    <Button
        android:id="@+id/release_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/release_btn" >
    </Button>
 -->
 
 	<Button
        android:id="@+id/para_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/para_btn" 
        android:visibility="invisible"
        android:padding="5dip"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/login">
    </Button>

 	<!-- 
    <Button
        android:id="@+id/login_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_btn" >
    </Button>
     -->
<!-- 
    <Button
        android:id="@+id/logout_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout_btn" >
    </Button>
 -->

    <Button
        android:id="@+id/place_call_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/place_call_btn"
        android:visibility="invisible"
        android:padding="5dip"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/call" >
    </Button>

    <Button
        android:id="@+id/hang_up_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hang_up_btn" 
        android:visibility="invisible"
        android:padding="5dip"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/hangup" >
    </Button>

    <Button
        android:id="@+id/accept_call_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/accept_call_btn" 
        android:visibility="invisible"
        android:padding="5dip"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/accept">
    </Button>

    <Button
        android:id="@+id/decline_call_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/decline_call_btn"
        android:visibility="invisible"
        android:padding="5dip"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/decline" >
    </Button>
    
</LinearLayout>